--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,12 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.25</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8.7</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
