--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,16 @@
 			<version>6.8.7</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.abel533</groupId>
+			<artifactId>ECharts</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
