--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,18 @@
 			<artifactId>gson</artifactId>
 			<version>2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+			<version>1.5.2.RELEASE</version>
+		</dependency>
+		<!-- jackson-datatype-joda -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-joda</artifactId>
+			<version>2.8.7</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
