--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,5 +24,9 @@ spring:
         ddl-auto: update
         naming:
           strategy: org.hibernate.cfg.ImprovedNamingStrategy
+  #日期格式化处理
+  jackson:
+      date-format: yyyy-MM-dd HH:mm:ss
+      time-zone: GMT+8
 server:
   port: 8089
