--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 			<artifactId>jackson-datatype-joda</artifactId>
 			<version>2.8.7</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
@@ -112,7 +112,7 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
 			<version>2.1.2.RELEASE</version>
-		</dependency>
+		</dependency>-->
 
 	</dependencies>
 
