--- a/pom.xml
+++ b/pom.xml
@@ -99,11 +99,11 @@
 			<version>1.5.2.RELEASE</version>
 		</dependency>
 		<!-- jackson-datatype-joda -->
-		<dependency>
+		<!--<despendency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-joda</artifactId>
 			<version>2.8.7</version>
-		</dependency>
+		</despendency>-->
 		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
