--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,8 @@
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 			<version>1.5.2.RELEASE</version>
 		</dependency>
-		<!-- jackson-datatype-joda -->
-		<!--<despendency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-joda</artifactId>
-			<version>2.8.7</version>
-		</despendency>-->
-		<!--<dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
@@ -112,7 +107,7 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
 			<version>2.1.2.RELEASE</version>
-		</dependency>-->
+		</dependency>
 
 	</dependencies>
 
