--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
 			<version>1.5.2.RELEASE</version>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
@@ -119,7 +119,7 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
 			<version>2.1.2.RELEASE</version>
-		</dependency>
+		</dependency>-->
 
 	</dependencies>
 
